fix: dark mode

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -17,7 +17,8 @@
 }
 
 html {
-  color-scheme: light;
+  color-scheme: light !important;;
+  color: black;
 }
 
 @layer components {
